<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/overflowMenu"
        android:icon="@drawable/baseline_more_vert_24"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/user"
                android:icon="@drawable/baseline_account_circle_24"
                android:title="@string/User"
                app:showAsAction="never" />
            <item
                android:id="@+id/settings"
                android:icon="@drawable/baseline_settings_24"
                android:title="@string/Settings"
                app:showAsAction="never" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/Logout"
                app:showAsAction="never" />
            <item
                android:id="@+id/coordinates"
                android:icon="@drawable/baseline_my_location_24"
                android:title="@string/coordinates"
                app:showAsAction="never" />
            <item
                android:id="@+id/startRide"
                android:icon="@drawable/baseline_electric_scooter_24"
                android:title="@string/create_scooter"
                app:showAsAction="never" />
            <item
                android:id="@+id/updateRide"
                android:icon="@drawable/baseline_electric_scooter_24"
                android:title="@string/update_scooter"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>
